# lomiri-api

./: CMakeLists.txt  CTestCustom.cmake.in  ChangeLog  NEWS  README
data/: CMakeLists.txt  liblomiri-api.pc.in
debian/: changelog  control  copyright  copyright.in  liblomiri-api-dev.install  liblomiri-api-doc.doc-base  liblomiri-api-doc.install  liblomiri-api0.install  liblomiri-api0.symbols  rules  watch
debian/patches/: 2001_disable-GioMemory_test.patch  2002_no-whitespace-checks-in-debian-folder.patch  series
debian/upstream/: metadata
doc/: Doxyfile.in
include/: CMakeLists.txt
include/lomiri/: CMakeLists.txt  Exception.h  LomiriExceptions.h  SymbolExport.h
include/lomiri/api/: CMakeLists.txt  Version.h.in
include/lomiri/shell/: CMakeLists.txt
include/lomiri/shell/application/: ApplicationInfoInterface.h  ApplicationManagerInterface.h  CMakeLists.txt  Mir.h  MirMousePointerInterface.h  MirPlatformCursor.h  MirSurfaceInterface.h  MirSurfaceItemInterface.h  MirSurfaceListInterface.h  SurfaceManagerInterface.h
include/lomiri/shell/launcher/: AppDrawerModelInterface.h  CMakeLists.txt  LauncherItemInterface.h  LauncherModelInterface.h  QuickListModelInterface.h
include/lomiri/shell/notifications/: CMakeLists.txt  Enums.h  ModelInterface.h  NotificationInterface.h  SourceInterface.h
include/lomiri/util/: CMakeLists.txt  Daemon.h  Dbus.h  DefinesPtrs.h  FileIO.h  GObjectMemory.h  GioMemory.h  GlibMemory.h  IniParser.h  NonCopyable.h  ResourcePtr.h  SnapPath.h
include/lomiri/util/internal/: DaemonImpl.h
src/: CMakeLists.txt
src/lomiri/: CMakeLists.txt  Exception.cpp  LomiriExceptions.cpp
src/lomiri/api/: CMakeLists.txt  Version.cpp
src/lomiri/api/internal/: CMakeLists.txt
src/lomiri/internal/: CMakeLists.txt
src/lomiri/util/: CMakeLists.txt  Daemon.cpp  Dbus.cpp  FileIO.cpp  IniParser.cpp  SnapPath.cpp
src/lomiri/util/internal/: CMakeLists.txt  DaemonImpl.cpp
test/: CMakeLists.txt  lomiri-api-test-config.h.in
test/gtest/: CMakeLists.txt
test/gtest/lomiri/: Exceptions_test.cpp
test/gtest/lomiri/api/Version/: Version_test.cpp
test/gtest/lomiri/util/: CMakeLists.txt
test/gtest/lomiri/util/Daemon/: Daemon_test.cpp
test/gtest/lomiri/util/Dbus/: CMakeLists.txt  Dbus_test.cpp
test/gtest/lomiri/util/DefinesPtrs/: DefinesPtrs_test.cpp
test/gtest/lomiri/util/FileIO/: FileIO_test.cpp
test/gtest/lomiri/util/GObjectMemory/: GObjectMemory_test.cpp
test/gtest/lomiri/util/GioMemory/: GioMemory_test.cpp
test/gtest/lomiri/util/GlibMemory/: GlibMemory_test.cpp
test/gtest/lomiri/util/IniParser/: IniParser_test.cpp
test/gtest/lomiri/util/ResourcePtr/: ResourcePtr_test.cpp
test/gtest/lomiri/util/SnapPath/: SnapPath_test.cpp
test/headers/: CMakeLists.txt  includechecker.py
test/qmltest/: CMakeLists.txt
test/qmltest/lomiri/shell/application/: tst_Application.qml
test/qmltest/lomiri/shell/launcher/: tst_Launcher.qml
test/qmltest/lomiri/shell/notifications/: tst_Notifications.qml
test/qmltest/mocks/: CMakeLists.txt
test/qmltest/mocks/plugins/Lomiri/Application/: CMakeLists.txt  TestApplicationPlugin.cpp  qmldir
test/qmltest/mocks/plugins/Lomiri/Application/Mocks/: MockApplicationInfo.cpp  MockApplicationInfo.h  MockApplicationManager.cpp  MockApplicationManager.h
test/qmltest/mocks/plugins/Lomiri/Launcher/: CMakeLists.txt  TestLauncherPlugin.cpp  qmldir
test/qmltest/mocks/plugins/Lomiri/Launcher/Mocks/: MockAppDrawerModel.cpp  MockAppDrawerModel.h  MockLauncherItem.cpp  MockLauncherItem.h  MockLauncherModel.cpp  MockLauncherModel.h  MockQuickListModel.cpp  MockQuickListModel.h
test/qmltest/mocks/plugins/Lomiri/Notifications/: CMakeLists.txt  TestNotificationsPlugin.cpp  qmldir
test/qmltest/mocks/plugins/Lomiri/Notifications/Mocks/: MockActionModel.h  MockModel.cpp  MockModel.h  MockNotification.h  MockNotificationsPlugin.cpp  MockSource.cpp  MockSource.h  qmldir
